fixed double probit link on tablet and fixed hidden menu burger on tablet

--- a/assets/css/subscribe.css
+++ b/assets/css/subscribe.css
@@ -849,4 +849,18 @@ select {
     width: 250px !important;
 }
 
+
+
+
+
+
 }
+
+
+@media screen and (max-width: 1087px) {
+.custom-burger {
+    display: -ms-flexbox !important;
+    display: flex !important;
+}
+}
+
